# ai-manager

./: Cargo.toml
src/: cli.rs  config.rs  git.rs  integrate.rs  known_repos.toml  main.rs  repo.rs  resource.rs
src/tui/: events.rs  mod.rs  ui.rs
