[package]
name = "ai-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap      = { version = "4", features = ["derive"] }
ratatui   = "0.29"
crossterm = "0.28"
anyhow    = "1"
toml      = "0.8"
serde     = { version = "1", features = ["derive"] }
junction  = "0.2"
indexmap  = { version = "2", features = ["serde"] }
